[Changes 1.2c01]

* Fix off-by-one error in add_socketread() and set_socketwrite() found
  by Coverity. (caf)

* Fix longstanding bug with ordering of rfc1459[] array. (caf)

* Fix crash after /SETAR -, reported by riderplus. (caf)

* Remove special handling of 484 numeric, which is no longer needed and
  was buggy (making BitchX think that usermode +G was set). (caf)

* Add /OBITS command, shows obituaries for some BitchX friends. (caf)

* Fix abuses of the RESIZE macro.  Reported by nenolod. (caf)

* Clears up a crash and some build warnings in the acro plugin. (caf)

* Applied patches from jdhore to clean up the plugin building
  and installing process. (caf)

* Fix building on newer Cygwin (reported by VICODAN). (caf)

* Fix building plugins on FreeBSD-10 (reported by cpet). (caf)

* Messages sent to channels should use lastlog level PUBLIC, not MSG. (caf)

* panasync OK'd releasing tcl.c, so here it is. (caf)

* Fix QUIT messages with SSL connections. (flashback)

* Rename include/bitchx to include/options.h, fixes building on
  case-insensitive platforms. (caf)

* Use AI_ADDRCONFIG flag to improve server address selection when client
  is built for IPv6 but we don't have an IPv6 address. (caf)

* Enable SSL support by default, if OpenSSL is present at build time. (caf)

* Fix leak and potential crash in lame_resolv() using IPv6.  (caf, snadge)

* Apply patch from snadge defining BIND_4_COMPAT on OpenBSD, to allow
  /nslookup to build. (caf) 

* Fix problem connecting to IPv4 when IPv6 enabled on FreeBSD and enable 
  IPv6 on all supporting platforms. Thanks to brabes, snadge and packet. (caf)

* Improve connect() error handling. (caf)

* Remove obsolete .spec files. (caf)

* configure - only create sig.inc if it's actually needed. (caf)

* configure - use the right dependencies when checking for net/if.h, i
  arpa/inet.h and resolv.h. Reported by flashback. (caf)

* Fix plugin Makefiles for out-of-tree building, reported by nyet. (caf)
